[package]
name = "chat_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
thiserror = "1.0.31"
tokio = { version = "1.18", features = ["macros","rt-multi-thread","sync","io-std", "io-util"] }
tokio-stream = "0.1.8"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
prost = "0.10"
tonic = "0.7.2"
serde = { version = "1.0", features = ["derive"] }
axum = { version = "0.5", features = ["ws"] }
serde_json = "1"
s2n-quic = { version = "1", default-features = false, features = ["provider-address-token-default", "provider-tls-rustls"] }
bytes = "1"
dashmap = "5"
once_cell = "1"
uuid = { version = "1", features = ["v4","fast-rng"] }
futures = "0.3.21"
tower-http = { version = "0.2", features = ["fs"]}
toml = "0.5"
fltk = { version = "1.3", optional = true }
fltk-table = { version = "0.2", optional = true }


[build-dependencies]
tonic-build = "0.7.2"

# 条件编译 gui 页面

[features]
gui = ["fltk", "fltk/fltk-bundled", "fltk-table"]

[[example]]
name = "server"
path = "examples/server/main.rs"


[[example]]
name = "grpc-client"
path = "examples/grpc_client/main.rs"
required-features = ["gui"]

[[example]]
name = "quic-client"
path = "examples/quic_client/main.rs"
required-features = ["gui"]
